# text-autocomplete

./: .gitattributes  .gitignore  README.md  pyproject.toml  solution.ipynb
configs/: config.yaml
models/: lstm_autocomplete.pt
src/: data_utils.py  eval_lstm.py  eval_transformer_pipeline.py  lstm_model.py  lstm_train.py  next_token_dataset.py
